// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlignmentToolbar should allow custom alignment controls to be specified 1`] = `
<Toolbar
  controls={
    Array [
      Object {
        "align": "custom-left",
        "icon": <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M12 5V3H3v2h9zm5 4V7H3v2h14zm-5 4v-2H3v2h9zm5 4v-2H3v2h14z"
          />
        </SVG>,
        "isActive": false,
        "onClick": [Function],
        "role": "menuitemradio",
        "title": "My custom left",
      },
      Object {
        "align": "custom-right",
        "icon": <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M14 5V3H6v2h8zm3 4V7H3v2h14zm-3 4v-2H6v2h8zm3 4v-2H3v2h14z"
          />
        </SVG>,
        "isActive": true,
        "onClick": [Function],
        "role": "menuitemradio",
        "title": "My custom right",
      },
    ]
  }
  icon={
    <SVG
      viewBox="-2 -2 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <Path
        d="M14 5V3H6v2h8zm3 4V7H3v2h14zm-3 4v-2H6v2h8zm3 4v-2H3v2h14z"
      />
    </SVG>
  }
  isCollapsed={true}
  label="Change text alignment"
/>
`;

exports[`AlignmentToolbar should match snapshot 1`] = `
<Toolbar
  controls={
    Array [
      Object {
        "align": "left",
        "icon": <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M12 5V3H3v2h9zm5 4V7H3v2h14zm-5 4v-2H3v2h9zm5 4v-2H3v2h14z"
          />
        </SVG>,
        "isActive": true,
        "onClick": [Function],
        "role": "menuitemradio",
        "title": "Align text left",
      },
      Object {
        "align": "center",
        "icon": <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M14 5V3H6v2h8zm3 4V7H3v2h14zm-3 4v-2H6v2h8zm3 4v-2H3v2h14z"
          />
        </SVG>,
        "isActive": false,
        "onClick": [Function],
        "role": "menuitemradio",
        "title": "Align text center",
      },
      Object {
        "align": "right",
        "icon": <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M17 5V3H8v2h9zm0 4V7H3v2h14zm0 4v-2H8v2h9zm0 4v-2H3v2h14z"
          />
        </SVG>,
        "isActive": false,
        "onClick": [Function],
        "role": "menuitemradio",
        "title": "Align text right",
      },
    ]
  }
  icon={
    <SVG
      viewBox="-2 -2 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <Path
        d="M12 5V3H3v2h9zm5 4V7H3v2h14zm-5 4v-2H3v2h9zm5 4v-2H3v2h14z"
      />
    </SVG>
  }
  isCollapsed={true}
  label="Change text alignment"
/>
`;
